--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,23 @@ body{
  	background-size: cover;
 	font-family: 'Raleway', sans-serif;
 	background-color: rgb(103, 58, 183);
+    font-color: #000000;
+    padding-left: 20%;
+    padding-right: 20%;
 }
 .form_container{
+	background-color: #ffffff; 
+	font-color:#000000;
+	font-size: 125%;
+
+}
+h1{
+	text-align: center;
+}
+p{
+ padding-left: 15%;
+}
+.submit_button{
+	text-align: center;
 	
 }
