small change form

--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@ body
 }
 header
 {
+	/*background: linear-gradient(black, gray);*/
 	background-color: #000;
 	padding-top: 1%;
 	padding-bottom: 1%;
