--- a/css/submit.css
+++ b/css/submit.css
@@ -1,9 +1,10 @@
 body
 {
-  padding: 0;
+  padding-top: 100px;
   margin: 0;
   background-color: #ddd;
-  font-family: 'Raleway', sans-serif;
+  font-family: Verdana, Geneva, sans-serif;
+  font-size: large;
 }
 header
 {
@@ -13,16 +14,31 @@ header
   position: fixed;
   width: 100%;
   z-index: 1;
-  padding-top: 4%
   top: 0;
 }
+.header_image
+{
+    max-width: 15%;
+}
+.content
+{
+    background-color: #ffffff;
+    width: 60%;
+    margin: auto;
+    padding: 1%;
+}
+hr
+{
+    color: #cacaca;
+    background-color: #cacaca;
+    width: 85%;
+}
 h1{
-  padding-top: 10%;
   text-align: center;
 }
-.Cong{
-  font-family: 'Raleway', sans-serif;
-  font-size: 180%;
+.congrats{
+/*  font-family: Raleway', sans-serif;*/
+  font-size: 135%;
   text-align: center;
 }
 h2{
@@ -30,7 +46,7 @@ h2{
 }
 
 li{
-  padding-top: 2%;
+  padding-top: 5px;
   font-size: 110%;
 
 }
@@ -46,3 +62,4 @@ h3{
   font-size: 150%;
   padding-left: 2%;
 }
+
